# monarch

./: .gitattributes  .gitignore  Install-Monarch.cmd  PROJECT.md  PROJECT_MANIFEST.md  PROJECT_STATUS.json  README.md  package-lock.json  package.json  remove-artifacts.js  remove-memory.js  remove-profile.js  remove-workspace-smoke.cjs  remove-workspace.js  tsconfig.json  vitest.config.ts
security/: .gitignore  README.md  monarch_sec.cmd  monarch_sec.ps1  pyproject.toml  run_monarch_security.py
security/config/: monarch_security.toml
security/scripts/: install_command.ps1  run_protector.ps1  setup_runtime.ps1  test.ps1
security/src/monarch_security/: __init__.py  actions.py  adversary.py  audit.py  behavior.py  benchmark.py  cli.py  config.py  control.py  deep_scan.py  emergency.py  events.py  incidents.py  integrity.py  network_history.py  notifications.py  persistence_baseline.py  pin.py  state.py  (+6 more)
security/tests/: test_attack_simulation.py  test_background_benchmark.py  test_behavior_detection.py  test_console_ui.py  test_deep_file_scan.py  test_deep_scan_hardening.py  test_device_sensor.py  test_device_trust.py  test_emergency.py  test_event_redaction.py  test_file_watch.py  test_incidents.py  test_integrity_and_control.py  test_llm_backends.py  test_llm_router.py  test_network_history.py  test_new_sensors.py  test_notifications.py  test_persistence_baseline.py  test_policy.py  test_quarantine.py  test_response_actions.py  test_response_broker.py  test_security_pin.py  test_security_profile.py  test_security_rules.py  test_tamper_sensor.py  test_verification.py
(+581 files in other folders)
